--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==4.0.0
 discord.py==1.7.3
 idna==3.2
 multidict==5.1.0
+pytz==2021.1
 soupsieve==2.2.1
 typing-extensions==3.10.0.2
 yarl==1.6.3
